--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>Home - Music Store</title>
     <link rel="shortcut icon" href="../assets/img/logoMusic.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
     <header class="hheader">
         <nav>
             <ul>
-                <a href="../index.html"><img src="../assets/img/logoMusic.png" alt="Logo"></a>
-                <a href="../index.html"><li>INICIO</li></a>
-                <a href="/pages/tienda.html"><li>TIENDA</li></a>
+                <a href="/index.html"><img src="../assets/img/logoMusic.png" alt="Logo"></a>
+                <a href="/index.html"><li>INICIO</li></a>
+                <a href="./pages/tienda.html"><li>TIENDA</li></a>
             </ul>
         </nav>
     </header>
@@ -68,5 +69,6 @@
         </ul>
     </footer>
     <script src="./js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
