--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button onclick="obtenerDatosUsuario()">Guardar Datos</button>
             <p id="mensajeBienvenida"></p>
         </section>
-        <section class="apod-section">
+        <section id="seccionqcy" class="apod-section">
             <div>
                 <h2>Artistas Destacados</h2>
                 <img id="logoHome" src="./assets/img/logoMusic.png" alt="logoMusic">
