--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="hheader">
         <nav>
             <ul>
-                <a href="/index.html"><img src="../assets/img/logoMusic.png" alt="Logo"></a>
-                <a href="/index.html"><li>INICIO</li></a>
+                <a href=""><img src="../assets/img/logoMusic.png" alt="Logo"></a>
+                <a href=""><li>INICIO</li></a>
                 <a href="./pages/tienda.html"><li>TIENDA</li></a>
             </ul>
         </nav>
